<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/gap_half_8dp"
        android:contentDescription="@string/meaning_picture"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/guideline_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_transcription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_half_8dp"
        app:layout_constraintStart_toStartOf="@id/guideline_picture"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="example" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_standard_16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/play_sound"
        android:src="@android:drawable/ic_lock_silent_mode_off"
        android:tint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tv_transcription"
        app:layout_constraintStart_toEndOf="@id/tv_transcription"
        app:layout_constraintTop_toTopOf="@id/tv_transcription" />

    <TextView
        android:id="@+id/tv_translation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_half_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ib_favorite"
        app:layout_constraintStart_toStartOf="@id/guideline_picture"
        app:layout_constraintTop_toBottomOf="@id/tv_transcription"
        app:layout_constraintVertical_bias="0"
        tools:text="пример +2 других варианта" />

    <TextView
        android:id="@+id/tv_meaning_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_half_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="333" />

    <ImageButton
        android:id="@+id/ib_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_half_8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/favorite_toggle"
        android:src="@android:drawable/btn_star"
        android:tint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>